<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="wrap_content"
                                             android:layout_height="wrap_content">

    <TextView
            android:text="@string/test_dialogue_prompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/test_click_title" app:fontFamily="@font/daniel"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
    />
    <Button
            android:text="@string/routine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/routineButton"
            app:layout_constraintEnd_toStartOf="@+id/difficultButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintTop_toBottomOf="@+id/test_click_title" android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"/>
    <Button
            android:text="@string/difficult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/difficultButton"
            app:layout_constraintEnd_toStartOf="@+id/challengingButton"
            app:layout_constraintStart_toEndOf="@+id/routineButton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintTop_toBottomOf="@+id/test_click_title" android:visibility="visible"/>
    <Button
            android:text="@string/challenging"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/challengingButton"
            app:layout_constraintStart_toEndOf="@+id/difficultButton"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp" android:layout_marginRight="16dp"
            app:layout_constraintTop_toBottomOf="@+id/test_click_title" android:visibility="visible"/>
</android.support.constraint.ConstraintLayout>