<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             android:layout_width="match_parent"
                                             android:layout_height="wrap_content"
                                             xmlns:app="http://schemas.android.com/apk/res-auto">

    <Button
            android:text="@string/stats"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/stats2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/skills2"
            android:background="@drawable/nav_button"/>
    <Button
            android:text="@string/skills"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/skills2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/stats2"
            app:layout_constraintEnd_toStartOf="@+id/notes2"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            android:background="@drawable/nav_button"/>
    <Button
            android:text="@string/notes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/notes2"
            app:layout_constraintStart_toEndOf="@+id/skills2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/nav_button"/>

</android.support.constraint.ConstraintLayout>