<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                             android:layout_height="wrap_content">

    <TextView
            android:id="@+id/statName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/stat_name_hint"
            android:textSize="15sp"
            android:fontFamily="@font/daniel"
            app:layout_constraintStart_toEndOf="@+id/statExponent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:fontFamily="@font/daniel" app:layout_constraintVertical_bias="0.52" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/imageView" android:layout_marginRight="8dp"/>


    <TextView
            android:id="@+id/statExponent"
            android:layout_width="wrap_content"
            android:layout_height="37dp"
            android:layout_marginTop="8dp"
            android:hint="@string/skill_exp_hint"
            android:textSize="30sp"
            android:fontFamily="@font/daniel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginBottom="8dp"/>

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/shade_black" android:id="@+id/imageView"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:contentDescription="@string/skill_shade"
            android:visibility="visible"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/aptitude" android:layout_marginRight="8dp"/>
    <ImageButton
            android:id="@+id/fpdButton"
            android:layout_width="60dp"
            android:layout_height="62dp" app:srcCompat="@drawable/fpa_bubbles"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toStartOf="@+id/testsButton"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            android:contentDescription="@string/fpd_indicators" android:layout_marginTop="8dp"
            android:visibility="gone"/>
    <ImageButton
            android:id="@+id/testsButton"
            android:contentDescription="@string/stat_image_button"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/test0"/>
    <TextView
            android:id="@+id/aptitude"
            android:text="@string/skill_exp_hint"
            android:layout_width="49dp"
            android:layout_height="0dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:background="@drawable/apt_circle"
            android:textSize="30sp" app:fontFamily="@font/daniel"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toStartOf="@+id/fpdButton"
            android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="@+id/testsButton" app:layout_constraintHorizontal_bias="0.75"
            app:layout_constraintTop_toTopOf="@+id/testsButton"
            app:layout_constraintBottom_toBottomOf="@+id/testsButton" android:visibility="gone"/>

</android.support.constraint.ConstraintLayout>