<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <Button
            android:id="@+id/beliefs_instincts"
            android:text="@string/beliefs_instincts"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@drawable/nav_button_selected" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/traits_relationships"/>
    <Button
            android:id="@+id/artha"
            android:text="@string/artha"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@drawable/nav_button" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/traits_relationships"
            app:layout_constraintHorizontal_bias="0.5"/>
    <Button
            android:text="@string/traits_relationships"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/traits_relationships"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@drawable/nav_button"
            app:layout_constraintStart_toEndOf="@+id/beliefs_instincts"
            app:layout_constraintEnd_toStartOf="@+id/artha"
            app:layout_constraintHorizontal_bias="0.5"/>

    <android.support.constraint.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/parchment_background"
            app:layout_constraintBottom_toTopOf="@+id/traits_relationships">


        <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                app:popupTheme="@android:color/transparent"
                app:layout_scrollFlags="scroll|enterAlways"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="16dp" android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp" android:layout_marginLeft="8dp" android:layout_marginStart="8dp">

        </android.support.v7.widget.Toolbar>

        <android.support.v7.widget.Toolbar
                android:id="@+id/header"
                android:layout_width="243dp"
                android:background="@drawable/header_beliefs"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                app:layout_scrollFlags="scroll|enterAlways"
                android:layout_height="56dp"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="16dp">

        </android.support.v7.widget.Toolbar>

        <ImageButton
                android:layout_width="56dp"
                android:layout_height="0dp"
                android:id="@+id/infoToggleButton"
                app:layout_constraintStart_toStartOf="@id/toolbar"
                app:layout_constraintTop_toTopOf="@id/toolbar" android:src="@drawable/home"
                android:background="@android:color/transparent"
                app:layout_constraintBottom_toBottomOf="@+id/toolbar"/>

        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine|text"
                android:textSize="12sp"
                android:fontFamily="@font/daniel"
                android:ems="10"
                android:background="@android:color/white"
                android:id="@+id/belief1" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/header" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
                app:layout_constraintStart_toEndOf="@+id/textView2"
        />
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine|text"
                android:textSize="12sp"
                android:fontFamily="@font/daniel"
                android:ems="10"
                android:background="@android:color/white"
                android:id="@+id/belief2"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
                app:layout_constraintStart_toEndOf="@+id/textView5"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/belief1"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine|text"
                android:textSize="12sp"
                android:fontFamily="@font/daniel"
                android:ems="10"
                android:background="@android:color/white"
                android:id="@+id/belief3"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
                app:layout_constraintStart_toEndOf="@+id/textView3"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/belief2"/>
        <TextView
                android:text="@string/belief_1"
                android:textSize="12sp"
                android:paddingRight="8dp"
                android:background="@drawable/belief_background"
                android:gravity="bottom"
                android:layout_width="68dp"
                android:layout_height="0dp" android:id="@+id/textView2"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/belief1"
                app:layout_constraintTop_toTopOf="@+id/belief1"/>
        <TextView
                android:text="@string/belief_2"
                android:textSize="12sp"
                android:paddingRight="8dp"
                android:background="@drawable/belief_background"
                android:gravity="bottom"
                android:layout_width="68dp"
                android:layout_height="0dp" android:id="@+id/textView3"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/belief2"
                app:layout_constraintTop_toTopOf="@+id/belief2"/>
        <TextView
                android:text="@string/belief_3"
                android:textSize="12sp"
                android:paddingRight="8dp"
                android:background="@drawable/belief_background"
                android:gravity="bottom"
                android:layout_width="68dp"
                android:layout_height="0dp" android:id="@+id/textView5"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/belief3"
                app:layout_constraintTop_toTopOf="@+id/belief3"/>

        <android.support.v7.widget.Toolbar
                android:id="@+id/secondary_header"
                android:layout_width="320dp"
                android:background="@drawable/header_instincts"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                app:layout_scrollFlags="scroll|enterAlways"
                android:layout_height="56dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/belief3">

        </android.support.v7.widget.Toolbar>
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine|text"
                android:textSize="12sp"
                android:fontFamily="@font/daniel"
                android:ems="10"
                android:background="@android:color/white"
                android:id="@+id/instinct1" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/secondary_header" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
                app:layout_constraintStart_toEndOf="@+id/textView7" android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine|text"
                android:textSize="12sp"
                android:fontFamily="@font/daniel"
                android:ems="10"
                android:background="@android:color/white"
                android:id="@+id/instinct2" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/instinct1" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
                app:layout_constraintStart_toEndOf="@+id/textView8" android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine|text"
                android:textSize="12sp"
                android:fontFamily="@font/daniel"
                android:ems="10"
                android:background="@android:color/white"
                android:id="@+id/instinct3" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/instinct2" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
                app:layout_constraintStart_toEndOf="@+id/textView9" android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"/>
        <TextView
                android:text="@string/instinct_1"
                android:layout_height="0dp" android:id="@+id/textView7"
                android:textSize="12sp"
                android:paddingRight="8dp"
                android:background="@drawable/belief_background"
                android:gravity="bottom"
                app:layout_constraintBottom_toBottomOf="@+id/instinct1"
                app:layout_constraintTop_toTopOf="@+id/instinct1" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_width="68dp"/>
        <TextView
                android:text="@string/instinct_2"
                android:layout_width="68dp"
                android:layout_height="0dp" android:id="@+id/textView8"
                android:textSize="12sp"
                android:paddingRight="8dp"
                android:background="@drawable/belief_background"
                android:gravity="bottom"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/instinct2"
                app:layout_constraintTop_toTopOf="@+id/instinct2"/>
        <TextView
                android:text="@string/instinct_3"
                android:layout_width="68dp"
                android:layout_height="0dp" android:id="@+id/textView9"
                android:textSize="12sp"
                android:paddingRight="8dp"
                android:background="@drawable/belief_background"
                android:gravity="bottom"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/instinct3"
                app:layout_constraintTop_toTopOf="@+id/instinct3"/>


    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>